@@ -5,7 +5,7 @@ this.registerIvars={
   "quest_forceOpen",
   "quest_forceRepop",
   "unlockSideOpNumber",
-  "sideOpsSelectionMode",
+  "quest_selectForArea",
   "showAllOpenSideopsOnUi",
   "ihSideopsPercentageCount",
   "quest_useAltForceFulton",
@@ -86,29 +86,12 @@ for i,categoryName in ipairs(this.QUEST_CATEGORIES)do
   this.registerIvars[#this.registerIvars+1]=ivarName
 end
 
-this.sideOpsSelectionMode={
+this.quest_selectForArea={
   save=IvarProc.CATEGORY_EXTERNAL,
   settings={
-    "OFF",
+    "FIRST_FOUND",
     "RANDOM",
-    "STORY",
-    "EXTRACT_INTERPRETER",
-    "BLUEPRINT",
-    "EXTRACT_HIGHLY_SKILLED",
-    "PRISONER",
-    "CAPTURE_ANIMAL",
-    "WANDERING_SOLDIER",
-    "DDOG_PRISONER",
-    "ELIMINATE_HEAVY_INFANTRY",
-    "MINE_CLEARING",
-    "ELIMINATE_ARMOR_VEHICLE",
-    "EXTRACT_GUNSMITH",
-    --"EXTRACT_CONTAINERS",
-    --"INTEL_AGENT_EXTRACTION",
-    "ELIMINATE_TANK_UNIT",
-    "ELIMINATE_PUPPETS",
-    --"TARGET_PRACTICE",
-    "ADDON_QUEST",
+    "RANDOM_ADDON",
   },
   OnChange=UpdateActiveQuest,
 }
@@ -150,7 +133,7 @@ this.sideOpsMenu={
     "Ivars.unlockSideOpNumber",
     "Ivars.quest_forceOpen",
     "Ivars.quest_forceRepop",
-    "Ivars.sideOpsSelectionMode",
+    "Ivars.quest_selectForArea",
     "InfQuestIvars.sideOpsCategoryMenu",
     "Ivars.showAllOpenSideopsOnUi",
     "Ivars.enableHeliReinforce",
@@ -208,26 +191,11 @@ this.langStrings={
     sideops_ELIMINATE_TANK_UNIT="Eliminate tank unit",
     sideops_ELIMINATE_PUPPETS="Eliminate wandering puppets",
     sideops_TARGET_PRACTICE="Target practice",
-    sideOpsSelectionMode="Sideop selection mode",
-    sideOpsSelectionModeSettings={
-      "Default (first found)",
+    quest_selectForArea="Selection for Area mode",
+    quest_selectForArea={
+      "First found (default)",
       "Random",
-      "Story/unique",
-      "Extract interpreter",
-      "Secure blueprint",
-      "Extract highly-skilled soldier",
-      "Prisoner extraction",
-      "Capture animals",
-      "Extract wandering Mother Base soldier",
-      "Unlucky Dog",
-      "Eliminate heavy infantry",
-      "Mine clearing",
-      "Eliminate armored vehicle unit",
-      "Extract legendary gunsmith",
-      "Eliminate tank unit",
-      "Eliminate wandering puppets",
-      --"TARGET_PRACTICE",
-      "Addon sideop",
+      "Random Addon",
     },
     ihSideopsPercentageCount="Include add-on sideops in completion percentage",
     rerollQuestSelection="Reroll sideops selection",
@@ -238,7 +206,7 @@ this.langStrings={
     eng={
       quest_forceOpen="Lets you force sideops open sideops before the usual progression.",
       quest_forceRepop="Lets you force story and one-time sideops to be replayable.",
-      sideOpsSelectionMode="Sideops are broken into areas to stop overlap, this setting lets you control the choice of sideop within the area. Random - picks a random sideop for the sideop area, the other modes choose a random sideop of the specic sideop category. Also see the Sideops category filter menu.",
+      quest_selectForArea="Sideops are broken into areas to stop overlap, this setting lets you control the choice which sideop will be selected to be Active for the area. 'Random Addon' will prioritize Addon sideops first. All selection is still prioritized by uncompleted story sideops, then other uncompleted sideops, then repeat sideops.",
       sideOpsCategoryMenu="Filters selection of sideops per category, Sideop selection mode will override this.",
       showAllOpenSideopsOnUi="Shows all open sideops in sideop list, this mostly affects open but not yet completed sideops from hiding others. There is however a limit of 192 entries for the sideop list, so some will be randomly dropped from the list.",
     },
